# effectful

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TESTING.md  devenv.nix  dylint.toml  moon.yml  nextest.toml  package.json  treefmt.ci.toml  treefmt.toml
.cargo-home/: .global-cache
crates/effect-rs/: Cargo.toml  README.md  moon.yml
crates/effect-rs-axum/: Cargo.toml  moon.yml
crates/effect-rs-axum/examples/: 010_routing_hello.rs  020_async_effect.rs  030_execute_handler.rs
crates/effect-rs-axum/src/: channel_bridge.rs  json.rs  lib.rs  routing.rs
crates/effect-rs-dylint-rules/: Cargo.toml  README.md  moon.yml
crates/effect-rs-dylint-rules/src/: lib.rs
crates/effect-rs-logger/: Cargo.toml  moon.yml
crates/effect-rs-logger/examples/: context_service.rs  effect_logger.rs  layer_build.rs  log_effects.rs  macro_block_tail.rs  macro_sync_bind.rs
crates/effect-rs-logger/src/: lib.rs  pipeline.rs
crates/effect-rs-macro/: Cargo.toml  moon.yml
crates/effect-rs-macro/src/context/: ctx.rs  err.rs  req.rs
crates/effect-rs-macro/src/layer/: mod.rs
crates/effect-rs-macro/src/pipe/: mod.rs
crates/effect-rs-macro/src/service/: service_def.rs  service_key.rs
crates/effect-rs-proc-macro/: Cargo.toml  moon.yml
crates/effect-rs-proc-macro/src/: effect_tagged.rs  expand.rs  lib.rs  transform.rs
crates/effect-rs-reqwest/: Cargo.toml  moon.yml
crates/effect-rs-reqwest/examples/: 010_wiremock_get_text.rs  020_wiremock_json.rs  030_layer_default_env.rs
crates/effect-rs-reqwest/src/: lib.rs
crates/effect-rs-tower/: Cargo.toml  moon.yml
crates/effect-rs-tower/examples/: 001_effect_service.rs  002_shared_counter.rs
crates/effect-rs-tower/src/: lib.rs
crates/effect-rs/benches/: effect_macro_bind_free.rs  phase0_baseline.rs
crates/effect-rs/book/: book.toml
crates/effect-rs/book/src/: appendix-a-api-reference.md  appendix-b-migration.md  appendix-c-glossary.md
crates/effect-rs/examples/: 001_effect_value.rs  002_fail_boundary.rs  003_map.rs  004_flat_map.rs  005_pipe.rs  006_effect_macro_binds.rs  007_effect_macro_discard.rs  008_effect_macro_env.rs  009_result_into_bind.rs  010_one_effect_macro_per_fn.rs  011_map_error.rs  012_catch.rs  013_fail_into.rs  014_err_macro.rs  015_or_variants.rs  016_flat_map_union.rs  017_cause_optional.rs  018_exit_type.rs  019_tagged_cell.rs  020_cons_nil.rs  021_ctx_macro.rs  022_get_here.rs  023_get_path.rs  024_get_mut.rs  025_req_type.rs  026_layer_fn.rs  027_stack_layers.rs  028_layer_build_errors.rs  029_service_key.rs  030_service_def.rs  031_service_constructor.rs  032_service_env.rs  033_layer_service.rs  034_provide_service.rs  035_layer_graph.rs  036_layer_graph_diagnostics.rs  037_from_async_basic.rs  038_from_async_map_err.rs  039_run_async.rs  040_runtime_trait.rs  (+66 more)
crates/effect-rs/src/: lib.rs
crates/effect-rs/src/algebra/: applicative.rs  interface.rs  monad.rs  monoid.rs  selective.rs  semigroup.rs
crates/effect-rs/src/collections/: hash_set.rs  mod.rs  mutable_queue.rs  red_black_tree.rs  trie.rs
crates/effect-rs/src/concurrency/: cancel.rs  fiber_handle.rs
crates/effect-rs/src/context/: optics.rs
crates/effect-rs/src/coordination/: channel.rs  pubsub.rs  queue.rs  semaphore.rs
crates/effect-rs/src/foundation/: coproduct.rs  func.rs  function.rs  isomorphism.rs  never.rs  option_.rs  product.rs  unit.rs
crates/effect-rs/src/kernel/: effect.rs  mod.rs  reader.rs  result.rs  thunk.rs
crates/effect-rs/src/layer/: service.rs
crates/effect-rs/src/macros/: README.md  mod.rs
crates/effect-rs/src/observability/: metric.rs
crates/effect-rs/src/resource/: pool.rs
crates/effect-rs/src/runtime/: rt.rs
crates/effect-rs/src/scheduling/: datetime.rs  schedule.rs
crates/effect-rs/src/schema/: SPEC.md  data.rs  json_schema_export.rs  parse.rs  parse_errors.rs  serde_bridge.rs
crates/effect_rs_macro/: Cargo.toml  moon.yml
crates/effect_rs_proc_macro/: Cargo.toml  moon.yml
crates/effect_rs_proc_macro/src/: effect_tagged.rs  expand.rs  lib.rs  transform.rs
crates/effect_rs_reqwest/: Cargo.toml  moon.yml
crates/effect_rs_reqwest/examples/: 010_wiremock_get_text.rs  020_wiremock_json.rs  030_layer_default_env.rs
crates/effect_rs_reqwest/src/: lib.rs
crates/effect_rs_tokio/: Cargo.toml  moon.yml
crates/effect_rs_tokio/examples/: 106_tokio_runtime.rs  107_tokio_fork_contract.rs  108_tokio_clock.rs  109_tokio_end_to_end.rs
crates/effect_rs_tokio/src/: lib.rs
crates/effectful_axum/: Cargo.toml  moon.yml
crates/effectful_axum/examples/: 010_routing_hello.rs  020_async_effect.rs  030_execute_handler.rs
crates/effectful_axum/src/: channel_bridge.rs  json.rs  lib.rs  routing.rs
crates/effectful_config/: Cargo.toml  moon.yml
crates/effectful_config/examples/: 001_extract_toml.rs  002_map_provider.rs  003_figment_provider_layer.rs  004_or_else_provider.rs
crates/effectful_config/src/: ambient.rs  config_desc.rs  error.rs  lib.rs  load.rs  provider.rs  secret.rs
crates/effectful_lint/: Cargo.toml  README.md
crates/effectful_lint/rules/: a-fn-signatures.yml  b-effect-macro.yml  c-async.yml  d-runtime.yml  e-services.yml  f-errors.yml  g-concurrency.yml  h-time.yml  i-testing.yml  j-observability.yml  k-schema.yml
crates/effectful_macro/: Cargo.toml  moon.yml
crates/effectful_proc_macro/: Cargo.toml  moon.yml
crates/effectful_proc_macro/src/: effect_tagged.rs  effect_test.rs  expand.rs  lib.rs  service_derive.rs  span.rs  tagged_error_derive.rs  test_bind_star.rs  test_yield.rs  transform.rs
crates/effectful_reqwest/: Cargo.toml  moon.yml
crates/effectful_reqwest/examples/: 010_wiremock_get_text.rs  020_wiremock_json.rs  030_layer_default_env.rs
crates/effectful_reqwest/src/: lib.rs
crates/effectful_tokio/: Cargo.toml  moon.yml
crates/effectful_tokio/examples/: 106_tokio_runtime.rs  107_tokio_fork_contract.rs  108_tokio_clock.rs  109_tokio_end_to_end.rs
crates/effectful_tokio/src/: lib.rs
crates/effectful_tower/: Cargo.toml  moon.yml
crates/effectful_tower/examples/: 001_effect_service.rs  002_shared_counter.rs
crates/effectful_tower/src/: lib.rs
(+773 files in other folders)
