[workspace]
resolver = "2"
exclude = [".tmp", "tmp"]
members = [
  "crates/effect-rs",
  "crates/effect-rs-axum",
  "crates/effect-rs-config",
  "crates/effect-rs-logger",
  "crates/effect-rs-macro",
  "crates/effect-rs-proc-macro",
  "crates/effect-rs-reqwest",
  "crates/effect-rs-tokio",
  "crates/effect-rs-tower",
]

# More stable / comparable Criterion numbers than default bench profile (inherits release).
[profile.bench]
lto = "thin"
codegen-units = 1
