[workspace]
resolver = "2"
exclude = [".tmp", "tmp"]
members = [
  "crates/effect_rs",
  "crates/effect_rs_axum",
  "crates/effect_rs_config",
  "crates/effect_rs_logger",
  "crates/effect_rs_macro",
  "crates/effect_rs_proc_macro",
  "crates/effect_rs_reqwest",
  "crates/effect_rs_tokio",
  "crates/effect_rs_tower",
]

# More stable / comparable Criterion numbers than default bench profile (inherits release).
[profile.bench]
lto = "thin"
codegen-units = 1
