[workspace]
resolver = "2"
exclude = [".tmp", "tmp", "crates/effectful_lint"]
members = [
  "crates/effectful",
  "crates/effectful_axum",
  "crates/effectful_config",
  "crates/effectful_logger",
  "crates/effectful_macro",
  "crates/effectful_proc_macro",
  "crates/effectful_reqwest",
  "crates/effectful_tokio",
  "crates/effectful_tower",
]

# More stable / comparable Criterion numbers than default bench profile (inherits release).
[profile.bench]
lto = "thin"
codegen-units = 1
