[package]
name = "effect-rs-axum"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Axum integration for the workspace `effect` crate — run Effect handlers on Tokio"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_axum"

[dependencies]
effect = { package = "effect-rs", path = "../effect-rs", features = [
  "schema-serde",
] }
effect-tokio = { package = "effect-rs-tokio", path = "../effect-rs-tokio" }
axum = { version = "0.7" }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
