[package]
name = "effect-rs-dylint-rules"
version = "0.1.0"
edition = "2024"
description = "Dylint dynamic library: Effect.rs style lints (rustc private API)"
publish = false

[lints.rust]
# Dylint `register_lints` must use `#[unsafe(no_mangle)]` (Rust 2024); this is not `unsafe { … }` in crate code.
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_dylint_rules"
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5.0.0"

[dev-dependencies]
rstest = "0.23"

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = ["."]
