[package]
name = "effect-rs-logger"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Effect-logging service (forwards to tracing) for effect! / AsyncEffect programs"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_logger"

[dependencies]
effect = { package = "effect-rs", path = "../effect-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
rstest = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "effect_logger"
path = "examples/effect_logger.rs"

[[example]]
name = "context_service"
path = "examples/context_service.rs"

[[example]]
name = "layer_build"
path = "examples/layer_build.rs"

[[example]]
name = "log_effects"
path = "examples/log_effects.rs"

[[example]]
name = "macro_sync_bind"
path = "examples/macro_sync_bind.rs"

[[example]]
name = "macro_block_tail"
path = "examples/macro_block_tail.rs"
