[package]
name = "effect-rs-macro"
version = "0.1.0"
edition = "2024"
description = "Declarative macros for the `effect` crate (`ctx!`, `pipe!`, …). Procedural `effect!` is in `effect-rs-proc-macro` — Rust cannot mix both in one proc-macro crate."

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_macro"
# Normal library: `macro_rules!` only. Expansions use `::effect::…` paths (no dependency on `effect`).
