[package]
name = "effect-rs-proc-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural `effect!` macro for the `effect` crate (proc-macro only; declarative macros live in `effect-rs-macro`)"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_proc_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
