[package]
name = "effect-rs-reqwest"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "reqwest integration for the workspace `effect` crate — HTTP as Effect programs"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_reqwest"

[dependencies]
bytes = "1"
effect = { package = "effect-rs", path = "../effect-rs", features = [
  "schema-serde",
] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
effect-tokio = { package = "effect-rs-tokio", path = "../effect-rs-tokio" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
