[package]
name = "effect-rs-tower"
version = "0.1.0"
edition = "2024"
description = "Tower Service bridge for `effect` programs (runs effects via effect-rs-tokio)"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_tower"

[dependencies]
effect = { package = "effect-rs", path = "../effect-rs" }
effect-tokio = { package = "effect-rs-tokio", path = "../effect-rs-tokio" }
tokio = { version = "1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
