[package]
name = "effect-rs"
version = "0.1.0"
edition = "2024"
description = "Effect<A, E, R> (sync + async), context/layers, pipe — interpreter-style, no bundled executor"

# Examples: numbered curriculum `examples/NNN_slug.rs` (auto-discovered). Tokio integration:
# `effect-rs-tokio` (`106_tokio_runtime` … `109_tokio_end_to_end`). See `examples/README.md`.

[lib]
name = "effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[[bench]]
name = "phase0_baseline"
harness = false

[[bench]]
name = "effect_macro_bind_free"
harness = false

[features]
# `serde_json::Value` ↔ [`crate::schema::Unknown`], JSON Schema helpers for primitives.
schema-serde = ["dep:serde_json"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
effect-macro = { package = "effect-rs-macro", path = "../effect-rs-macro" }
effect-proc-macro = { package = "effect-rs-proc-macro", path = "../effect-rs-proc-macro" }
flume = "0.11"
im = "15"
jiff = "0.2"
serde_json = { version = "1", optional = true }
tokio = { version = "1.50.0", features = ["macros", "rt", "time", "sync"] }

[dev-dependencies]
criterion = "0.8.2"
pollster = "0.4"
proptest = "1"
rstest = "0.23"
tokio = { version = "1.50.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
