[package]
name = "effect_rs_macro"
version = "0.1.0"
edition = "2024"
description = "Declarative macros for the `effect` crate (`ctx!`, `pipe!`, …). Procedural `effect!` is in `effect_rs_proc_macro` — Rust cannot mix both in one proc-macro crate."

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_rs_macro"
# Normal library: `macro_rules!` only. Expansions use `::effect_rs::…` paths (no dependency on `effect`).
