[package]
name = "effect_rs_reqwest"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "reqwest integration for the workspace `effect` crate — HTTP as Effect programs"
repository = "https://github.com/Industrial/effect-rs"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_reqwest"

[dependencies]
bytes = "1"
effect_rs = { path = "../effect_rs", version = "0.1.0", features = [
  "schema-serde",
] }
# `default-features = false` + `rustls-tls`: avoid `native-tls` → ancient `openssl-sys`
# lower bounds that break `cargo update -Z minimal-versions` on OpenSSL 3 (CI / modern Linux).
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "gzip",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
effect_rs_tokio = { path = "../effect_rs_tokio", version = "0.1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
