[package]
name = "effect_rs_tokio"
version = "0.1.0"
edition = "2024"
description = "Tokio runtime adapter and re-exports for the workspace `effect` crate"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effect_tokio"

[dependencies]
effect_rs = { path = "../effect_rs", version = "0.1.0" }
tokio = { version = "1.50.0", features = ["rt", "time", "sync"] }

[dev-dependencies]
pollster = "0.4"
