[package]
name = "effectful_axum"
version = "0.2.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Axum integration for the workspace `effectful` crate — run Effect handlers on Tokio"
repository = "https://github.com/EduSantosBrito/effectful"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effectful_axum"

[dependencies]
effectful = { path = "../effectful", version = "0.2.0", features = [
  "schema-serde",
] }
effectful_tokio = { path = "../effectful_tokio", version = "0.2.0" }
effectful_tower = { path = "../effectful_tower", version = "0.2.0" }
axum = { version = "0.8" }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
