[package]
name = "effectful_config"
version = "0.2.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Effect.ts-style ConfigProvider + Figment/serde layers for the workspace `effectful` crate"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }
[lints.clippy]
# ConfigError embeds figment::Error; returning Result<_, ConfigError> trips result_large_err under -D warnings.
result_large_err = "allow"

[features]
default = ["env", "toml"]
# `figment` providers
env = ["figment/env"]
toml = ["figment/toml"]
json = ["figment/json"]
yaml = ["figment/yaml"]
# Load `.env` before reading `std::env` (via `dotenvy`)
dotenv = ["dep:dotenvy"]

[lib]
name = "effectful_config"

[dependencies]
effectful = { path = "../effectful", version = "0.2.0" }
effectful_logger = { path = "../effectful_logger", version = "0.2.0" }
# Floor for figment's pear dep: 0.2.0 does not build on current Rust (fmt::Write on InlinableString).
pear = "0.2.9"
figment = { version = "0.10.19", default-features = false }
serde = { version = "1", default-features = false }
url = { version = "2", default-features = false }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
temp-env = "0.3"
tempfile = "3"
