[package]
name = "effectful_macro"
version = "0.2.0"
edition = "2024"
description = "Declarative macros for the `effectful` crate (`ctx!`, `pipe!`, …). Procedural `effect!` is in `effectful_proc_macro` — Rust cannot mix both in one proc-macro crate."
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effectful_macro"
# Normal library: `macro_rules!` only. Expansions use `::effectful::…` paths (no dependency on `effectful`).
