[package]
name = "effectful_tower"
version = "0.2.0"
edition = "2024"
description = "Tower Service bridge for `effectful` programs (runs effects via effectful_tokio)"
license = "CC-BY-SA-4.0"
repository = "https://github.com/EduSantosBrito/effectful"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "effectful_tower"

[dependencies]
effectful = { path = "../effectful", version = "0.2.0" }
effectful_tokio = { path = "../effectful_tokio", version = "0.2.0" }
tokio = { version = "1", features = ["sync"] }
# 0.5.0 does not build under minimal-version resolution (const / Identity::new).
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
